16318
{code}
scala> def foo: AnyRef{def bar: String} =  new AnyRef{def bar = 42}
<console>:7: error: type mismatch;
 found   : java.lang.Object{}
 required: AnyRef{def bar: String}
       def foo: AnyRef{def bar: String} =  new AnyRef{def bar = 42}
                                           ^
{code}

It looks a bit like as if the compiler error message would use the erasure of the right expression return type. I would have expected something like:

{code}
scala> def foo: AnyRef{def bar: String} =  new AnyRef{def bar = 42}
<console>:7: error: type mismatch;
 found   : AnyRef{def bar: Int}
 required: AnyRef{def bar: String}
       def foo: AnyRef{def bar: String} =  new AnyRef{def bar = 42}
                                                                ^
{code}

The caret positioning could also be a bit better if it pointed to the def bar.
